@@ -5,3 +5,6 @@ SUBDIRS =
 if ENABLE_GCONF
 SUBDIRS += gconf
 endif
+if ENABLE_QT
+SUBDIRS += qt
+endif
